@@ -1,32 +1,24 @@
 /**
- * Copyright (c) 2016 See AUTHORS file
- * All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
- *
- * Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
- * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
- * Neither the name of the mini2Dx nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ * Copyright 2017 Thomas Cashman
  */
 package org.mini2Dx.ui.controller;
 
 import java.util.concurrent.atomic.AtomicInteger;
 
 import org.mini2Dx.core.controller.ControllerType;
-import org.mini2Dx.core.controller.XboxOneController;
-import org.mini2Dx.core.controller.button.XboxOneButton;
-import org.mini2Dx.core.controller.xboxone.XboxOneControllerAdapter;
+import org.mini2Dx.core.controller.PS4Controller;
+import org.mini2Dx.core.controller.button.PS4Button;
+import org.mini2Dx.core.controller.ps4.PS4ControllerAdapter;
 import org.mini2Dx.ui.InputSource;
 import org.mini2Dx.ui.UiContainer;
 
 import com.badlogic.gdx.Input.Keys;
 
 /**
- * {@link XboxOneController} implementation of {@link ControllerUiInput}
+ * {@link PS4Controller} implementation of {@link ControllerUiInput}
  */
-public class XboxOneUiInput extends XboxOneControllerAdapter implements ControllerUiInput<XboxOneButton> {
-	private static final String ID_PREFIX = XboxOneUiInput.class.getSimpleName() + "-";
+public class PS4UiInput extends PS4ControllerAdapter implements ControllerUiInput<PS4Button> {
+	private static final String ID_PREFIX = PS4UiInput.class.getSimpleName() + "-";
 	private static final AtomicInteger ID_GENERATOR = new AtomicInteger();
 	
 	private final String id;
@@ -35,7 +27,7 @@ public class XboxOneUiInput extends XboxOneControllerAdapter implements Controll
 	/* User configurable fields */
 	private float buttonRepeatTimer = 0.25f;
 	private boolean enabled = true;
-	private XboxOneButton actionButton = XboxOneButton.A;
+	private PS4Button actionButton = PS4Button.X;
 	
 	/* Internal fields */
 	private float leftTimer = buttonRepeatTimer;
@@ -44,7 +36,7 @@ public class XboxOneUiInput extends XboxOneControllerAdapter implements Controll
 	private float downTimer = buttonRepeatTimer;
 	private boolean left, right, up, down;
 	
-	public XboxOneUiInput(UiContainer uiContainer) {
+	public PS4UiInput(UiContainer uiContainer) {
 		super();
 		this.id = ID_PREFIX + ID_GENERATOR.incrementAndGet();
 		
@@ -110,9 +102,9 @@ public class XboxOneUiInput extends XboxOneControllerAdapter implements Controll
 			downTimer = buttonRepeatTimer;
 		}
 	}
-
+	
 	@Override
-	public boolean leftStickXMoved(XboxOneController controller, float value) {
+	public boolean leftStickXMoved(PS4Controller controller, float value) {
 		if(value < 0f) {
 			left = true;
 			right = false;
@@ -125,14 +117,14 @@ public class XboxOneUiInput extends XboxOneControllerAdapter implements Controll
 		}
 		if(enabled) {
 			uiContainer.setLastInputSource(InputSource.CONTROLLER);
-			uiContainer.setLastControllerType(ControllerType.XBOX_ONE);
+			uiContainer.setLastControllerType(ControllerType.PS4);
 			return true;
 		}
 		return false;
 	}
 	
 	@Override
-	public boolean leftStickYMoved(XboxOneController controller, float value) {
+	public boolean leftStickYMoved(PS4Controller controller, float value) {
 		if(value < 0f) {
 			up = true;
 			down = false;
@@ -145,34 +137,34 @@ public class XboxOneUiInput extends XboxOneControllerAdapter implements Controll
 		}
 		if(enabled) {
 			uiContainer.setLastInputSource(InputSource.CONTROLLER);
-			uiContainer.setLastControllerType(ControllerType.XBOX_ONE);
+			uiContainer.setLastControllerType(ControllerType.PS4);
 			return true;
 		}
 		return false;
 	}
 	
 	@Override
-	public boolean buttonDown(XboxOneController controller, XboxOneButton button) {
+	public boolean buttonDown(PS4Controller controller, PS4Button button) {
 		if(!enabled) {
 			return false;
 		}
 		uiContainer.buttonDown(this, button);
 		uiContainer.setLastInputSource(InputSource.CONTROLLER);
-		uiContainer.setLastControllerType(ControllerType.XBOX_ONE);
+		uiContainer.setLastControllerType(ControllerType.PS4);
 		return true;
 	}
 	
 	@Override
-	public boolean buttonUp(XboxOneController controller, XboxOneButton button) {
+	public boolean buttonUp(PS4Controller controller, PS4Button button) {
 		if(!enabled) {
 			return false;
 		}
 		uiContainer.buttonUp(this, button);
 		uiContainer.setLastInputSource(InputSource.CONTROLLER);
-		uiContainer.setLastControllerType(ControllerType.XBOX_ONE);
+		uiContainer.setLastControllerType(ControllerType.PS4);
 		return true;
 	}
-
+	
 	@Override
 	public boolean isEnabled() {
 		return enabled;
@@ -193,12 +185,12 @@ public class XboxOneUiInput extends XboxOneControllerAdapter implements Controll
 	}
 
 	@Override
-	public XboxOneButton getActionButton() {
+	public PS4Button getActionButton() {
 		return actionButton;
 	}
 
 	@Override
-	public void setActionButton(XboxOneButton actionButton) {
+	public void setActionButton(PS4Button actionButton) {
 		if(actionButton == null) {
 			return;
 		}
@@ -231,7 +223,7 @@ public class XboxOneUiInput extends XboxOneControllerAdapter implements Controll
 			return false;
 		if (getClass() != obj.getClass())
 			return false;
-		XboxOneUiInput other = (XboxOneUiInput) obj;
+		PS4UiInput other = (PS4UiInput) obj;
 		if (id == null) {
 			if (other.id != null)
 				return false;
