@@ -108,7 +108,7 @@ public class ButtonRenderNode extends ParentRenderNode<Button, ButtonStyleRule> 
 
 	@Override
 	protected float determinePreferredContentWidth(LayoutState layoutState) {
-		if(layoutRuleset.isHiddenByInputSource(layoutState.getLastInputSource())) {
+		if(layoutRuleset.isHiddenByInputSource(layoutState)) {
 			return 0f;
 		}
 		float layoutRuleResult = layoutRuleset.getPreferredWidth(layoutState);
