@@ -133,7 +133,7 @@ public class TabViewRenderNode extends ParentRenderNode<TabView, TabStyleRule>im
 
 	@Override
 	protected float determinePreferredContentWidth(LayoutState layoutState) {
-		if (layoutRuleset.isHiddenByInputSource(layoutState.getLastInputSource())) {
+		if (layoutRuleset.isHiddenByInputSource(layoutState)) {
 			return 0f;
 		}
 		float layoutRuleResult = layoutRuleset.getPreferredWidth(layoutState);
