@@ -14,6 +14,7 @@ package org.mini2Dx.ui.render;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.mini2Dx.core.controller.ControllerType;
 import org.mini2Dx.ui.InputSource;
 import org.mini2Dx.ui.UiContainer;
 import org.mini2Dx.ui.layout.LayoutState;
@@ -164,5 +165,9 @@ public class UiContainerRenderTree extends ParentRenderNode<UiContainer, ParentS
 	
 	public InputSource getLastInputSource() {
 		return ((UiContainer) element).getLastInputSource();
+	}
+	
+	public ControllerType getLastControllerType() {
+		return ((UiContainer) element).getLastControllerType();
 	}
 }
